--- a/gradle.properties
+++ b/gradle.properties
@@ -8,15 +8,15 @@ minecraft_version_range=[1.21,1.22)
 forge_version=51.0.32
 forge_version_range=[0,)
 loader_version_range=[0,)
-mapping_channel=official
-mapping_version=1.21
+mapping_channel=parchment
+mapping_version=2024.07.07-1.21
 
 
 ## Mod Properties
 mod_id=net
 mod_name=AM Net
 mod_license=AM CC 0
-mod_version=1.21-24.08.08.01
+mod_version=1.21-24.08.08.03
 mod_group_id=am.mc
 mod_authors=AnMao(s)
 mod_description=Net component mod for development purposes.\nGithub:https://github.com/An-Mao/Net
